{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 86,
  "lineage": "c13fd879-4dff-0894-ce8b-89a0d1ec23ba",
  "resources": [
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:internet-gateway/igw-078d7a0244c1b261c",
            "id": "igw-078d7a0244c1b261c",
            "owner_id": "891377064812",
            "tags": {
              "Name": "EksVPC-igw"
            },
            "tags_all": {
              "Name": "EksVPC-igw"
            },
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9fda970403a8993",
            "arn": "arn:aws:ec2:us-east-1:891377064812:elastic-ip/eipalloc-0c9fda970403a8993",
            "domain": "vpc",
            "id": "eipalloc-0c9fda970403a8993",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-204-246-185.compute-1.amazonaws.com",
            "public_ip": "18.204.246.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EksVPC-nat-eip-1"
            },
            "tags_all": {
              "Name": "EksVPC-nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a41d22fbdcfb3a0",
            "arn": "arn:aws:ec2:us-east-1:891377064812:elastic-ip/eipalloc-04a41d22fbdcfb3a0",
            "domain": "vpc",
            "id": "eipalloc-04a41d22fbdcfb3a0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-198-143-124.compute-1.amazonaws.com",
            "public_ip": "34.198.143.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EksVPC-nat-eip-2"
            },
            "tags_all": {
              "Name": "EksVPC-nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e224e5db76a2ec2e",
            "arn": "arn:aws:ec2:us-east-1:891377064812:elastic-ip/eipalloc-0e224e5db76a2ec2e",
            "domain": "vpc",
            "id": "eipalloc-0e224e5db76a2ec2e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-193-168-227.compute-1.amazonaws.com",
            "public_ip": "44.193.168.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EksVPC-nat-eip-3"
            },
            "tags_all": {
              "Name": "EksVPC-nat-eip-3"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9fda970403a8993",
            "association_id": "eipassoc-0179f0f76e80576c7",
            "connectivity_type": "public",
            "id": "nat-05bbd2d4678d1e826",
            "network_interface_id": "eni-04926cfd8b07ea6a6",
            "private_ip": "11.0.1.211",
            "public_ip": "18.204.246.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d57a24d2daee991",
            "tags": {
              "Name": "EksVPC-nat-gw-1"
            },
            "tags_all": {
              "Name": "EksVPC-nat-gw-1"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a41d22fbdcfb3a0",
            "association_id": "eipassoc-0c098094800fa1602",
            "connectivity_type": "public",
            "id": "nat-0cbc593112080cef5",
            "network_interface_id": "eni-05ddc89cc8e4ef695",
            "private_ip": "11.0.2.59",
            "public_ip": "34.198.143.124",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a0c86c5a633fdb6",
            "tags": {
              "Name": "EksVPC-nat-gw-2"
            },
            "tags_all": {
              "Name": "EksVPC-nat-gw-2"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e224e5db76a2ec2e",
            "association_id": "eipassoc-0794bd55341876a08",
            "connectivity_type": "public",
            "id": "nat-09815ac02ce799fb2",
            "network_interface_id": "eni-048e42d419e104fcf",
            "private_ip": "11.0.3.149",
            "public_ip": "44.193.168.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05202afc4df3f36ed",
            "tags": {
              "Name": "EksVPC-nat-gw-3"
            },
            "tags_all": {
              "Name": "EksVPC-nat-gw-3"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:route-table/rtb-057aaec156dba6b9a",
            "id": "rtb-057aaec156dba6b9a",
            "owner_id": "891377064812",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05bbd2d4678d1e826",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EksVPC-private-rt-1"
            },
            "tags_all": {
              "Name": "EksVPC-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.nat_gateway.aws_nat_gateway.nat_gw",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:route-table/rtb-0ca1bb6374759fd30",
            "id": "rtb-0ca1bb6374759fd30",
            "owner_id": "891377064812",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cbc593112080cef5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EksVPC-private-rt-2"
            },
            "tags_all": {
              "Name": "EksVPC-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.nat_gateway.aws_nat_gateway.nat_gw",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:route-table/rtb-0f9b09e11979fef88",
            "id": "rtb-0f9b09e11979fef88",
            "owner_id": "891377064812",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09815ac02ce799fb2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EksVPC-private-rt-3"
            },
            "tags_all": {
              "Name": "EksVPC-private-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.nat_gateway.aws_nat_gateway.nat_gw",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:route-table/rtb-049a7458477efbd09",
            "id": "rtb-049a7458477efbd09",
            "owner_id": "891377064812",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078d7a0244c1b261c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EksVPC-public-rt"
            },
            "tags_all": {
              "Name": "EksVPC-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0119acbacb62deb62",
            "route_table_id": "rtb-057aaec156dba6b9a",
            "subnet_id": "subnet-0502eaf336241f503"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.nat_gateway.aws_nat_gateway.nat_gw",
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bdadb62d1d02934",
            "route_table_id": "rtb-0ca1bb6374759fd30",
            "subnet_id": "subnet-018d04f03870b1712"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.nat_gateway.aws_nat_gateway.nat_gw",
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1979337b5bd37cc",
            "route_table_id": "rtb-0f9b09e11979fef88",
            "subnet_id": "subnet-073a7faa5d12526d2"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.nat_gateway.aws_nat_gateway.nat_gw",
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095a8a9b856432589",
            "route_table_id": "rtb-049a7458477efbd09",
            "subnet_id": "subnet-04d57a24d2daee991"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.IGW",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b89b79ca083a0998",
            "route_table_id": "rtb-049a7458477efbd09",
            "subnet_id": "subnet-01a0c86c5a633fdb6"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.IGW",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1964aa4dbd7df47",
            "route_table_id": "rtb-049a7458477efbd09",
            "subnet_id": "subnet-05202afc4df3f36ed"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.IGW",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:subnet/subnet-0502eaf336241f503",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0502eaf336241f503",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377064812",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-private-subnet-1"
            },
            "tags_all": {
              "Name": "EksVPC-private-subnet-1"
            },
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:subnet/subnet-018d04f03870b1712",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018d04f03870b1712",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377064812",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-private-subnet-2"
            },
            "tags_all": {
              "Name": "EksVPC-private-subnet-2"
            },
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:subnet/subnet-073a7faa5d12526d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073a7faa5d12526d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377064812",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-private-subnet-3"
            },
            "tags_all": {
              "Name": "EksVPC-private-subnet-3"
            },
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:subnet/subnet-04d57a24d2daee991",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d57a24d2daee991",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377064812",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-public-subnet-1"
            },
            "tags_all": {
              "Name": "EksVPC-public-subnet-1"
            },
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:subnet/subnet-01a0c86c5a633fdb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a0c86c5a633fdb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377064812",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-public-subnet-2"
            },
            "tags_all": {
              "Name": "EksVPC-public-subnet-2"
            },
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.EksVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:subnet/subnet-05202afc4df3f36ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05202afc4df3f36ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377064812",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EksVPC-public-subnet-3"
            },
            "tags_all": {
              "Name": "EksVPC-public-subnet-3"
            },
            "vpc_id": "vpc-026dc0cde02979fa6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.EksVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "EksVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377064812:vpc/vpc-026dc0cde02979fa6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-03b9176986b584e4a",
            "default_route_table_id": "rtb-05698d8c3d6276dad",
            "default_security_group_id": "sg-0cff494cd557b8a4e",
            "dhcp_options_id": "dopt-0e8d680c1847db986",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026dc0cde02979fa6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05698d8c3d6276dad",
            "owner_id": "891377064812",
            "tags": {
              "Name": "EksVPC"
            },
            "tags_all": {
              "Name": "EksVPC"
            }
          }
        }
      ]
    }
  ]
}